# timetable2db

./: MultiLecturer.txt  README  mongodb_bkp_fhsdozent.json  timetable2db.cabal
src/: EventS.hs  FileOpp.hs  HTTPRequest.hs  HtmlToList.hs  HtmlToListV2.hs  IS.hs  IsToEvent.hs  IsToJson.hs  JsonToIS.hs  ListToIS.hs  LoadTimeTables.hs  ManageArgs.hs  MultiLecturer.txt  ReadFile.hs  RestService.hs  SSLWeb.hs  TempEventUpload.hs  TestEvents.hs  TestHtmlToListV2.hs  TestMongoDaten.hs  TestSuite.hs  TimeTableToJSON.hs  TimeTableToJSONv2.hs  main.hs  test.txt
src/Transformer/: IS.hs  IsReadWrite.hs  IsToEvent.hs  IsToJson.hs  IsToTempEvent.hs  ListToIS.hs  TempEventToJSON.hs  TestListToIS.hs  TimeTableToICAL.hs  TimeTableToJSONv2.hs
src/Transformer/AlternativeRoom/: AlternativeRoom.hs
src/Transformer/Event/: EventS.hs  TestEvents.hs
src/Transformer/Lecturer/: FHSLecturerS.hs  MultiLecturer.hs  ReadFHSLecturer.hs  test.txt
src/Transformer/TempEvent/: TempEvent.hs  TempEventActions.hs
src/analyseSpace/: HaxmlTest.hs  HxtTest.hs  WebRequest.hs
tests/: TestSuite.hs  TestTest.hs
tests/Transformer/: TestListToIS.hs
vorlage/: s_bai1.html  s_bai6_unix.html  s_bamm6.html  s_bamm6_unix.html
