Name:                timetable2db
Version:             0.1
Synopsis:            ..
License:             BSD3
Author:              Christian Linde
Maintainer:          linde.chris@gmail.com
Category:            Misc
Build-type:          Simple
Cabal-version:       >=1.2
Description:         ..

Executable timetable2db
  hs-source-dirs:    src
  Main-is:           main.hs
  Build-depends:     base >= 4.2 && < 5
                   , tagsoup -any, bytestring -any
                   , attoparsec -any, aeson -any
                   , http-types -any, http-enumerator -any
                   , network -any, utf8-string -any
                   , containers -any
