Name:                timetable2db
Version:             0.1
Synopsis:            ..
License:             BSD3
Author:              Christian Linde
Maintainer:          linde.chris@gmail.com
Category:            Misc
Build-type:          Simple
Cabal-version:       >=1.2
Description:         ..

Executable timetable2db
  hs-source-dirs:    src
  Main-is:           main.hs
  Build-depends:     base >= 4.2 
                   , tagsoup -any, bytestring -any
                   , attoparsec -any, aeson -any
                   , http-types -any, http-enumerator -any
                   , network -any, utf8-string -any
                   , containers -any
                   , tls -any, http-enumerator -any
                   , iconv -any, split -any, base64-string -any
                   , xml -any, directory -any

test-suite timetable2db-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: src tests
--  Main-is: TestSuite.hs
  Main-is: TestTest.hs
  Build-depends: base >= 4.2 && < 5,
                     containers, QuickCheck >= 2, HUnit,
                     test-framework,
--                     test-framework-quickcheck2 ,
                     test-framework-hunit
  ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
